--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     <ul class="week-calendar__all-day-list">
                         <li class="week-calendar__all-day-list-item">
                             <ul class="event-list">
-                                <li class="evnet-list__item">
+                                <li class="event-list__item">
                                     <button class="event event--filled">
                                         <span class="event__color"></span>
                                         <span class="event__title">My first event</span>
@@ -697,7 +697,7 @@
                     <ul class="week-calendar__all-day-list">
                         <li class="week-calendar__all-day-list-item">
                             <ul class="event-list">
-                                <li class="evnet-list__item">
+                                <li class="event-list__item">
                                     <button class="event event--filled">
                                         <span class="event__color"></span>
                                         <span class="event__title">My first event</span>
@@ -1014,8 +1014,8 @@
 
                 <div class="dialog__footer">
                     <div class="dialog__actions">
-                        <button class="button button--secondary" type="button" data-dialog-close-button>Cancel</button>
-                        <button class="button button--primary">Save</button>
+                      <button class="button button--secondary" type="button" data-dialog-close-button>Cancel</button>
+                      <button class="button button--primary">Save</button>
                     </div>
                 </div>
             </div>
